Fix the missing borders

--- a/src/css/themes/bootstrap3/default/infragistics.theme.css
+++ b/src/css/themes/bootstrap3/default/infragistics.theme.css
@@ -3267,10 +3267,10 @@ body .ui-tooltip {
 .ui-iggrid th.ui-state-active.ui-state-hover .ui-icon {
   color: #222222;
 }
-/* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
+/* BUG 246065 Marin Popov 07.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
 .ui-iggrid tbody td {
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
 }
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
   border-right: 1px solid #ddd;
