--- a/src/css/themes/bootstrap3/default/modules/infragistics.ui.grid.less
+++ b/src/css/themes/bootstrap3/default/modules/infragistics.ui.grid.less
@@ -283,10 +283,10 @@
   color: @ui-icons-darker;
 }
 
-/* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
+/* BUG 246065 Marin Popov 07.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
 .ui-iggrid tbody td {
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
+  border-left: 1px solid @table-border-color;
+  border-right: 1px solid @table-border-color;
 }
 
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
