--- a/src/css/themes/bootstrap4/default/infragistics.theme.css
+++ b/src/css/themes/bootstrap4/default/infragistics.theme.css
@@ -2865,7 +2865,8 @@ border-top removed for tables with virtualization, or headers */ }
   background: #f5f5f5; }
 
 .ui-iggrid th.ui-state-active,
-.ui-iggrid th.ui-state-focus {
+.ui-iggrid th.ui-state-focus,
+.ui-iggrid-sortableheader:focus {
   background: #f5f5f5; }
 
 .ui-iggrid .ui-iggrid-footer,
@@ -2917,8 +2918,8 @@ border-top removed for tables with virtualization, or headers */ }
 
 /* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
 .ui-iggrid tbody td {
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent; }
+  border-left: 1px solid #eceeef;
+  border-right: 1px solid #eceeef; }
 
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
   border-right: 1px solid #eceeef; }
